# snips-nlu-ontology

./: Cargo.toml
ffi/: Cargo.toml
ffi/ffi-macros/: Cargo.toml
src/: language.rs
